# ultramaster_kr106

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  KR106.cpp  KR106.h  KR106Controls.h  KR106_Presets.h  Makefile  README.md  config.h  preset_adsr.csv  preset_categories.csv
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-linux.yml  ci-linux.yml  release.yml
DSP/: KR106Chorus.h  KR106_DSP.h
Source/: KR106PresetManager.h  KR106_Presets_JUCE.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Controls/: KR106Button.h  KR106Keyboard.h  KR106Knob.h  KR106MenuSheet.h  KR106PresetDisplay.h  KR106Scope.h  KR106Slider.h  KR106Switch.h  KR106Tooltip.h  KR106VarianceSheet.h
Source/DSP/: KR106ADSR.h  KR106AnalogNoise.h  KR106Arpeggiator.h  KR106Chorus.h  KR106LFO.h  KR106Noise.h  KR106Oscillators.h  KR106OscillatorsWT.h  KR106ParamValue.h  KR106VCA.h  KR106VCF.h  KR106VCF_OPTIMIZED.h  KR106VcfFreqJ106.h  KR106VcfFreqJ6.h  KR106Voice.h  KR106_DSP.h  KR106_DSP_SetParam.h  KR106_HPF.h
docs/: README.md  index.html
docs/factory_presets_midi_files/: A_11 Brass_basic_pitch.mid  A_12 Brass Swell_basic_pitch.mid  A_13 Trumpet_basic_pitch.mid  A_14 Flutes_basic_pitch.mid  A_15 Moving Strings_basic_pitch.mid  A_16 Brass & Strings_basic_pitch.mid  A_17 Choir_basic_pitch.mid  A_18 Piano I_basic_pitch.mid  A_21 Organ I_basic_pitch.mid  A_22 Organ II_basic_pitch.mid  A_23 Combo Organ_basic_pitch.mid  A_24 Calliope_basic_pitch.mid  A_25 Donald Pluck_basic_pitch.mid  A_26 Celeste_basic_pitch.mid  A_27 Elect. Piano I_basic_pitch.mid  A_28 Elect. Piano II_basic_pitch.mid  A_31 Clock Chimes_basic_pitch.mid  A_32 Steel Drums_basic_pitch.mid  A_33 Xylophone_basic_pitch.mid  A_34 Brass III_basic_pitch.mid  A_35 Fanfare_basic_pitch.mid  A_36 Strings III_basic_pitch.mid  A_37 Pizzicato_basic_pitch.mid  A_38 High Strings_basic_pitch.mid  A_41 Bass Clarinet_basic_pitch.mid  A_42 English Horn_basic_pitch.mid  A_43 Brass Ensemble_basic_pitch.mid  A_44 Guitar_basic_pitch.mid  A_45 Koto_basic_pitch.mid  A_46 Dark Pluck_basic_pitch.mid  A_47 Funky I_basic_pitch.mid  A_48 Synth Bass I_basic_pitch.mid  A_51 Lead I_basic_pitch.mid  A_52 Lead II_basic_pitch.mid  A_53 Lead III_basic_pitch.mid  A_54 Funky II_basic_pitch.mid  A_55 Synth Bass II_basic_pitch.mid  A_56 Funky III_basic_pitch.mid  A_57 Thud Wah_basic_pitch.mid  A_58 Going Up_basic_pitch.mid  (+90 more)
docs/website/: .gitignore  changelog.html  guide.html  index.html  midi_mapping.html  preset_test.html  styles.css  sysex_param_test.json
resources/: KR106-AAX-Info.plist  KR106-AU-Info.plist  KR106-CLAP-Info.plist  KR106-VST2-Info.plist  KR106-VST3-Info.plist  KR106-macOS-AUv3-Info.plist  KR106-macOS-Info.plist  main.rc
resources/img/: KR106.icns  kr106_background@2x.psd
tools/: README.md  sysex_param_test.mid  sysex_param_test.py
tools/adsr-calibration/: README.md  adsr_overview.csv  generate_lut.py  juno6_model.py  measured_data.csv
tools/osc-calibrate/: pwm_test.cpp
tools/preset-compare/: preset_compare.cpp
tools/preset-gen/: Factory_Patches.pat  gen_presets.py  lib.json
tools/preset-midi/: gen_preset_midi.cpp
tools/profile/: Makefile  dsp_profile.cpp  osc_ab_test.cpp  osc_render.cpp
tools/render-midi/: render_midi.cpp
tools/vcf-analyze/: filter_test3.cpp  gen_filter_test2.cpp
tools/wasm/: .gitignore  FIXME  Makefile  kr106-audio.js  kr106-controls.js  kr106-params.js  kr106-processor.js  kr106-scope.js  kr106-ui.js  kr106_wasm.cpp
